Architecture redesign to to support other types of connections

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,92 +9,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.gustavs.bluetoothpcremote.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Status pending..."
-        android:id="@+id/btInfo" />
-
     <Button
+        android:text="@string/connect_btn_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="↑"
-        android:id="@+id/up"
-        android:contextClickable="false"
-        android:layout_marginTop="91dp"
-        android:layout_below="@+id/btInfo"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:clickable="false" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="↓"
-        android:id="@+id/down"
-        android:contextClickable="false"
-        android:layout_below="@+id/up"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="←"
-        android:id="@+id/left"
-        android:contextClickable="false"
-        android:layout_alignBottom="@+id/down"
-        android:layout_toLeftOf="@+id/down"
-        android:layout_toStartOf="@+id/down" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="→"
-        android:id="@+id/right"
-        android:contextClickable="false"
-        android:layout_alignBottom="@+id/down"
-        android:layout_toRightOf="@+id/down"
-        android:layout_toEndOf="@+id/down" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Space"
-        android:id="@+id/space"
-        android:contextClickable="false"
-        android:layout_below="@+id/down"
-        android:layout_alignLeft="@+id/left"
-        android:layout_alignStart="@+id/left"
-        android:layout_alignRight="@+id/right"
-        android:layout_alignEnd="@+id/right" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ctrl + F5"
-        android:id="@+id/ctrl_f5"
-        android:contextClickable="false"
-        android:layout_below="@+id/btInfo"
-        android:layout_alignLeft="@+id/up"
-        android:layout_alignStart="@+id/up" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="F5"
-        android:id="@+id/f5"
-        android:contextClickable="false"
-        android:layout_below="@+id/btInfo"
-        android:layout_toLeftOf="@+id/up"
-        android:layout_toStartOf="@+id/up" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CTRL + L"
-        android:id="@+id/ctrl_l"
-        android:contextClickable="false"
-        android:layout_alignBaseline="@+id/ctrl_f5"
-        android:layout_alignBottom="@+id/ctrl_f5"
-        android:layout_toRightOf="@+id/ctrl_f5"
-        android:layout_toEndOf="@+id/ctrl_f5" />
+        android:id="@+id/btn_connect"
+        android:onClick="connectToPC" />
 </RelativeLayout>
