--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,35 @@
     tools:context="com.example.gustavs.bluetoothpcremote.MainActivity">
 
     <Button
-        android:text="@string/connect_btn_text"
+        android:text="@string/btn_connectViaBluetooth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/btn_connect"
-        android:onClick="connectToPC" />
+        android:id="@+id/btn_connectBluetooth"
+        android:onClick="connectViaBluetooth" />
+
+    <Button
+        android:text="@string/btn_connectViaWiFiDirect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_connectWiFiDirect"
+        android:onClick="connectViaWiFiDirect"
+        android:layout_below="@+id/btn_connectBluetooth"
+        android:layout_alignLeft="@+id/btn_connectBluetooth"
+        android:layout_alignStart="@+id/btn_connectBluetooth"
+        android:layout_alignRight="@+id/btn_connectBluetooth"
+        android:layout_alignEnd="@+id/btn_connectBluetooth" />
+
+    <Button
+        android:text="@string/btn_connectViaWlan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:onClick="connectViaWlan"
+        android:layout_below="@+id/btn_connectWiFiDirect"
+        android:layout_alignLeft="@+id/btn_connectWiFiDirect"
+        android:layout_alignStart="@+id/btn_connectWiFiDirect"
+        android:layout_alignRight="@+id/btn_connectBluetooth"
+        android:layout_alignEnd="@+id/btn_connectBluetooth" />
 </RelativeLayout>
