--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,11 +34,23 @@
         android:text="@string/btn_connectViaWlan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button"
+        android:id="@+id/btn_connectViaWLAN"
         android:onClick="connectViaWlan"
         android:layout_below="@+id/btn_connectWiFiDirect"
         android:layout_alignLeft="@+id/btn_connectWiFiDirect"
         android:layout_alignStart="@+id/btn_connectWiFiDirect"
+        android:layout_alignRight="@+id/btn_connectBluetooth"
+        android:layout_alignEnd="@+id/btn_connectBluetooth" />
+
+    <Button
+        android:text="@string/btn_scanQRCode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_scanQRCode"
+        android:onClick="scanQRCode"
+        android:layout_above="@+id/btn_connectBluetooth"
+        android:layout_alignLeft="@+id/btn_connectBluetooth"
+        android:layout_alignStart="@+id/btn_connectBluetooth"
         android:layout_alignRight="@+id/btn_connectBluetooth"
         android:layout_alignEnd="@+id/btn_connectBluetooth" />
 </RelativeLayout>
