--- a/app/src/main/res/layout/activity_main_qrcode.xml
+++ b/app/src/main/res/layout/activity_main_qrcode.xml
@@ -46,7 +46,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="66dp"
-        android:checked="false" />
+        android:checked="true" />
 
     <CheckBox
         android:layout_width="wrap_content"
