--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -12,11 +12,9 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="↑"
+        android:text="@string/up_arrow"
         android:id="@+id/up"
-        android:contextClickable="false"
         android:layout_marginTop="91dp"
-        android:layout_below="@+id/connectionInfo"
         android:layout_centerHorizontal="true"
         android:clickable="false"
         android:onClick="onButtonDown" />
@@ -24,9 +22,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="↓"
+        android:text="@string/down_arrow"
         android:id="@+id/down"
-        android:contextClickable="false"
         android:layout_below="@+id/up"
         android:layout_centerHorizontal="true"
         android:onClick="onButtonDown" />
@@ -34,9 +31,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="←"
+        android:text="@string/left_arrow"
         android:id="@+id/left"
-        android:contextClickable="false"
         android:layout_alignBottom="@+id/down"
         android:layout_toLeftOf="@+id/down"
         android:layout_toStartOf="@+id/down"
@@ -45,9 +41,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="→"
+        android:text="@string/right_arrow"
         android:id="@+id/right"
-        android:contextClickable="false"
         android:layout_alignBottom="@+id/down"
         android:layout_toRightOf="@+id/down"
         android:layout_toEndOf="@+id/down"
@@ -56,9 +51,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Space"
+        android:text="@string/space"
         android:id="@+id/space"
-        android:contextClickable="false"
         android:layout_below="@+id/down"
         android:layout_alignLeft="@+id/left"
         android:layout_alignStart="@+id/left"
@@ -69,47 +63,43 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ctrl + F5"
-        android:id="@+id/ctrl_f5"
-        android:contextClickable="false"
-        android:layout_below="@+id/connectionInfo"
-        android:layout_alignLeft="@+id/up"
-        android:layout_alignStart="@+id/up"
-        android:onClick="onButtonDown" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="F5"
+        android:text="@string/f5"
         android:id="@+id/f5"
-        android:contextClickable="false"
-        android:layout_below="@+id/connectionInfo"
-        android:layout_toLeftOf="@+id/up"
-        android:layout_toStartOf="@+id/up"
-        android:onClick="onButtonDown" />
+        android:onClick="onButtonDown"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/ctrl_f5"
+        android:layout_toStartOf="@+id/ctrl_f5" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CTRL + L"
+        android:text="@string/ctrl_f5"
+        android:id="@+id/ctrl_f5"
+        android:onClick="onButtonDown"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/up"
+        android:layout_alignStart="@+id/up" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/ctrl_l"
         android:id="@+id/ctrl_l"
-        android:contextClickable="false"
-        android:layout_alignBaseline="@+id/ctrl_f5"
-        android:layout_alignBottom="@+id/ctrl_f5"
+        android:onClick="onButtonDown"
+        android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/ctrl_f5"
-        android:layout_toEndOf="@+id/ctrl_f5"
-        android:onClick="onButtonDown" />
+        android:layout_toEndOf="@+id/ctrl_f5" />
 
     <Button
-        android:text="Dim Screen"
+        android:text="@string/dim_screen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="49dp"
+        android:id="@+id/btn_dim_screen"
+        android:onClick="onDimScreenClicked"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="49dp"
-        android:id="@+id/btn_dim_screen"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="onDimScreenClicked" />
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
