--- a/app/src/main/res/layout/main_activity_item.xml
+++ b/app/src/main/res/layout/main_activity_item.xml
@@ -1,40 +1,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:padding="6dip" >
+    android:padding="6dp" >
 
     <ImageView
-        android:id="@+id/icon"
+        android:id="@+id/editicon"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="6dip"
-        android:contentDescription="TODO"
+        android:layout_margin="10dp"
+        android:contentDescription="@string/edit"
         android:src="@drawable/ic_mode_edit_black_24dp"/>
 
     <TextView
-        android:id="@+id/secondLine"
+        android:id="@+id/title"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/editicon"
+        android:layout_toEndOf="@id/editicon"
+        android:gravity="center_vertical"
+        android:text="@string/title"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/subtitle"
         android:layout_width="fill_parent"
         android:layout_height="26dip"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@id/icon"
+        android:layout_toRightOf="@id/editicon"
+        android:layout_toEndOf="@id/editicon"
         android:ellipsize="marquee"
-        android:text="Description"
+        android:text="@string/subtitle"
         android:textSize="12sp" />
-
-    <TextView
-        android:id="@+id/text1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/secondLine"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignWithParentIfMissing="true"
-        android:layout_toRightOf="@id/icon"
-        android:gravity="center_vertical"
-        android:text="Example application"
-        android:textSize="16sp" />
 
 </RelativeLayout>
