Connection by priority GUI

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -15,54 +15,83 @@
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
 
-    <Button
-        android:id="@+id/btn_connectViaWLAN"
-        android:text="@string/btn_connectViaWlan"
+
+    <TextView
+        android:id="@+id/lbl_first_priority"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:textSize="16sp"
+        android:text="@string/connection_1st_priority"
         android:layout_below="@+id/profile_toolbar"
-        android:onClick="connectViaWlan" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+    
+    <RadioGroup
+        android:id="@+id/rg_first_priority"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/lbl_first_priority"
+        android:orientation="horizontal"
+        android:checkedButton="@+id/rb_first_priority_wlan">
+        <RadioButton
+            android:id="@+id/rb_first_priority_wlan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/wlan"
+            android:onClick="onPriorityChecked" />
+            <!--android:button="@null"
+            android:background="@drawable/ic_mode_edit_black_24dp"-->
+        <RadioButton
+            android:id="@+id/rb_first_priority_btooth"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/bluetooth"
+            android:onClick="onPriorityChecked" />
+    </RadioGroup>
 
-    <Button
-        android:id="@+id/btn_connectBluetooth"
-        android:text="@string/btn_connectViaBluetooth"
+    <TextView
+        android:id="@+id/lbl_second_priority"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:text="@string/connection_2nd_priority"
+        android:layout_below="@+id/rg_first_priority"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/btn_connectViaWLAN"
-        android:onClick="connectViaBluetooth" />
+        android:layout_alignParentStart="true"/>
 
-    <Button
-        android:id="@+id/btn_connectWiFiDirect"
-        android:text="@string/btn_connectViaWiFiDirect"
-        android:layout_width="match_parent"
+    <RadioGroup
+        android:id="@+id/rg_second_priority"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_connectBluetooth"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="connectViaWiFiDirect" />
-
-    <Button
-        android:id="@+id/btn_scanQRCode"
-        android:text="@string/btn_scanQRCode"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_connectWiFiDirect"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="scanQRCode" />
-
+        android:layout_below="@+id/lbl_second_priority"
+        android:orientation="horizontal"
+        android:checkedButton="@+id/rb_second_priority_btooth">
+        <RadioButton
+            android:id="@+id/rb_second_priority_wlan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/wlan"
+            android:onClick="onPriorityChecked" />
+        <RadioButton
+            android:id="@+id/rb_second_priority_btooth"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/bluetooth"
+            android:onClick="onPriorityChecked" />
+        <RadioButton
+            android:id="@+id/rb_second_priority_none"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/none" />
+    </RadioGroup>
 
     <TextView
         android:id="@+id/lbl_wireless"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16dp"
-        android:text="Wireless"
-        android:layout_below="@+id/btn_scanQRCode"
+        android:textSize="16sp"
+        android:text="@string/wireless"
+        android:layout_below="@+id/rg_second_priority"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
@@ -76,7 +105,7 @@
 
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/et_wlanname"
-            android:hint="Computer's network name"
+            android:hint="@string/computers_network_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -92,7 +121,7 @@
         android:layout_alignParentStart="true">
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/et_wlanport"
-            android:hint="TCP Port"
+            android:hint="@string/tcp_port"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -105,8 +134,8 @@
         android:id="@+id/lbl_bluetooth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16dp"
-        android:text="Bluetooth"
+        android:textSize="16sp"
+        android:text="@string/bluetooth"
         android:layout_below="@+id/text_input_layout2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
@@ -120,12 +149,23 @@
         android:layout_alignParentStart="true">
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/et_blutoothname"
-            android:hint="Computer's Bluetooth name"
+            android:hint="@string/computers_bluetooth_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
     </android.support.design.widget.TextInputLayout>
+
+
+    <Button
+        android:id="@+id/btn_scanQRCode"
+        android:text="@string/btn_scanQRCode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text_input_layout3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="scanQRCode" />
 
 </RelativeLayout>
