--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.gustavs.remotepccontroller.MainActivity"
+    tools:context=".MainActivity"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -18,18 +18,21 @@
         android:id="@+id/list_view_compat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/main_toolbar" />
+        android:layout_below="@+id/main_toolbar"
+        android:paddingTop="8dp"
+        android:paddingBottom="72dp"
+        android:clipToPadding="false"
+        android:drawSelectorOnTop="true"/>
 
     <android.support.design.widget.FloatingActionButton
         android.support.design:fabSize="normal"
-        android.support.design:useCompatPadding="true"
+        android.support.design:rippleColor="@color/colorAccentRipple"
+        android:layout_margin="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_add_black_24dp"
-        android:clickable="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:layout_centerInParent="true"
         android:onClick="addProfile"/>
 
 </RelativeLayout>
