--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android.support.design="http://schemas.android.com/apk/res-auto">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/main_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
+    <include
+        layout="@layout/toolbar"
+        android:id="@+id/main_toolbar"/>
 
     <android.support.v7.widget.ListViewCompat xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/list_view_compat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/main_toolbar"
+        android:layout_below="@id/main_toolbar"
         android:paddingTop="8dp"
         android:paddingBottom="72dp"
         android:clipToPadding="false"
