--- a/app/src/main/res/menu/profile_menu.xml
+++ b/app/src/main/res/menu/profile_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ProfileActivity">
+    tools:context=".profile.ProfileActivity">
 
     <item android:id="@+id/action_save"
         android:title="@string/save"
