--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,8 @@
         layout="@layout/toolbar"
         android:id="@+id/main_toolbar"/>
 
-    <android.support.v7.widget.ListViewCompat xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/list_view_compat"
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/main_toolbar"
